core: fix navbar icon not showing in firefox

--- a/passbook/static/static/passbook/passbook.css
+++ b/passbook/static/static/passbook/passbook.css
@@ -22,7 +22,7 @@
 }
 
 .pb-brand > img {
-    max-height: 80px;
+    max-height: 76px;
     margin-right: .5em;
 }
 
